添加详细页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="info_btn_component">零件位置</string>
     <string name="info_lable_tips">提示</string>
     <string name="info_lable_notice">注意</string>
+    <string name="title_activity_image_view">ImageViewActivity</string>
     <!--详细页 结束 -->
 </resources>
